# salat

./: .bumpversion.cfg  LICENSE  README.md  pyproject.toml  setup.py
salat/: calculations.py  methods.py
tests/: test_calculations.py  test_hypothesis.py  test_methods.py  test_readme_example.py
